fix: css overflow in iframe inspector

--- a/static/css/parts/ViewletIframeInspector.css
+++ b/static/css/parts/ViewletIframeInspector.css
@@ -51,3 +51,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.IframeInspectorSelectedContentPre {
+  contain: strict;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
